--- a/configure.ac
+++ b/configure.ac
@@ -61,7 +61,7 @@ m4_include([m4/esl_avx512.m4])
 m4_include([m4/esl_neon.m4])
 m4_include([m4/esl_vmx.m4])
 
-m4_include([m4/ax_mpi.m4])
+m4_include([m4/ax_prog_cc_mpi.m4])
 m4_include([m4/ax_pthread.m4])
 
 m4_include([m4/esl_pic_flags.m4])
@@ -69,7 +69,7 @@ m4_include([m4/esl_pic_flags.m4])
 ################################################################
 # 2. AC_INIT
 ################################################################
-AC_INIT(Easel, 0.46, sean@eddylab.org, easel)
+AC_INIT(Easel, 0.48, sean@eddylab.org, easel)
 AC_MSG_NOTICE([Configuring the Easel library for your system.])
 
 # remember if the user is overriding CFLAGS
@@ -106,8 +106,8 @@ fi
 #     EASEL_VERSION    e.g. "1.9a"
 #
 
-EASEL_DATE="Nov 2019"
-EASEL_COPYRIGHT="Copyright (C) 2019 Howard Hughes Medical Institute"
+EASEL_DATE="Nov 2020"
+EASEL_COPYRIGHT="Copyright (C) 2020 Howard Hughes Medical Institute"
 EASEL_LICENSE="Freely distributed under the BSD open source license."
 EASEL_VERSION=$PACKAGE_VERSION
 EASEL_URL="http://bioeasel.org/"
@@ -189,8 +189,15 @@ AC_ARG_WITH(gsl,       [AS_HELP_STRING([--with-gsl],       [use the GSL, GNU Sci
 # 5. Checks for programs, including ${CC} and its ${CFLAGS}
 ################################################################
 
+# Choose our compiler - which might be mpicc, if enable_mpi is "yes".
+#   AX_PROG_CC_MPI will call AC_PROG_CC if enable_mpi is "no".
+#
+AX_PROG_CC_MPI([test x"$enable_mpi" = xyes],
+    [AC_DEFINE(HAVE_MPI,  1, [Use MPI parallelization])],
+    [ if test x"$enable_mpi" = xyes; then
+        AC_MSG_ERROR([MPI library not found for --enable-mpi]);
+      fi])
 AC_PROG_CC
-AC_PROG_CC_STDC
 AC_PROG_CPP
 AC_PROG_INSTALL
 AC_PROG_RANLIB
@@ -217,16 +224,6 @@ elif test "$enable_debugging" != "no"; then
 elif test "$esl_cflags_env_set" != "yes"; then
    CFLAGS="-O3"
 fi
-
-
-# MPI :  set @CC@ to mpicc;
-#        set @MPILIBS@ if needed (usually not; mpicc deals w/ it);
-#        defines HAVE_MPI. 
-if test "$enable_mpi" = "yes"; then
-   AX_MPI(,AC_MSG_ERROR([MPI library not found for --enable-mpi]))
-   CC=$MPICC
-fi
-
 
 
 # PIC (position-independent code) for shared library support
