--- a/Makefile.in
+++ b/Makefile.in
@@ -304,6 +304,7 @@ UTESTS =\
 	esl_hmm_utest\
 	esl_huffman_utest\
 	esl_hyperexp_utest\
+	esl_iset_utest\
 	esl_json_utest\
 	esl_keyhash_utest\
 	esl_matrixops_utest\
@@ -311,6 +312,7 @@ UTESTS =\
 	esl_minimizer_utest\
 	esl_mixdchlet_utest\
 	esl_msa_utest\
+	esl_msa_iset_utest\
 	esl_msacluster_utest\
 	esl_msafile_utest\
 	esl_msafile2_utest\
@@ -428,6 +430,7 @@ EXAMPLES = \
         esl_cluster_example\
 	esl_cpu_example\
         esl_dirichlet_example\
+		esl_distance_example\
         esl_dmatrix_example\
         esl_dsqdata_example\
         esl_dsqdata_example2\
@@ -454,6 +457,7 @@ EXAMPLES = \
         esl_minimizer_example\
 	esl_mixdchlet_example\
         esl_mixgev_example\
+		esl_msa_iset_example\
         esl_msafile_example\
 	esl_msafile_a2m_example\
 	esl_msafile_a2m_example2\
