algs needed for new profmark (#63)
* algs needed for new profmark

* added unit test for esl_dst_Connectivity

* added utests and examples in esl_msa_iset.c, utest and example for new code in esl_distance.c

* added comments for larger arguments to bi functions

* added comments about workspace arguments to esl_iset.c funtions

* utests added for esl_iset.c

* added example for esl_iset

Co-authored-by: spetti <spetti@fas.harvard.edu>
Co-authored-by: Nick Carter <npcarter@gmail.com>

--- a/Makefile.in
+++ b/Makefile.in
@@ -124,6 +124,7 @@ HDRS = 	easel.h\
 	esl_hmm.h\
 	esl_huffman.h\
 	esl_hyperexp.h\
+    esl_iset.h\
 	esl_json.h\
 	esl_keyhash.h\
 	esl_matrixops.h\
@@ -133,6 +134,7 @@ HDRS = 	easel.h\
 	esl_mixgev.h\
 	esl_mpi.h\
 	esl_msa.h\
+    esl_msa_iset.h\
 	esl_msacluster.h\
 	esl_msafile.h\
 	esl_msafile2.h\
@@ -205,6 +207,7 @@ OBJS =	easel.o\
 	esl_hmm.o\
 	esl_huffman.o\
 	esl_hyperexp.o\
+    esl_iset.o\
 	esl_json.o\
 	esl_keyhash.o\
 	esl_matrixops.o\
@@ -214,6 +217,7 @@ OBJS =	easel.o\
 	esl_mixgev.o\
 	esl_mpi.o\
 	esl_msa.o\
+    esl_msa_iset.o\
 	esl_msacluster.o\
 	esl_msafile.o\
 	esl_msafile2.o\
@@ -300,6 +304,7 @@ UTESTS =\
 	esl_hmm_utest\
 	esl_huffman_utest\
 	esl_hyperexp_utest\
+	esl_iset_utest\
 	esl_json_utest\
 	esl_keyhash_utest\
 	esl_matrixops_utest\
@@ -307,6 +312,7 @@ UTESTS =\
 	esl_minimizer_utest\
 	esl_mixdchlet_utest\
 	esl_msa_utest\
+	esl_msa_iset_utest\
 	esl_msacluster_utest\
 	esl_msafile_utest\
 	esl_msafile2_utest\
@@ -424,6 +430,7 @@ EXAMPLES = \
         esl_cluster_example\
 	esl_cpu_example\
         esl_dirichlet_example\
+		esl_distance_example\
         esl_dmatrix_example\
         esl_dsqdata_example\
         esl_dsqdata_example2\
@@ -445,11 +452,13 @@ EXAMPLES = \
         esl_hmm_example\
 	esl_huffman_example\
         esl_hyperexp_example\
+		esl_iset_example\
 	esl_json_example\
         esl_keyhash_example\
         esl_minimizer_example\
 	esl_mixdchlet_example\
         esl_mixgev_example\
+		esl_msa_iset_example\
         esl_msafile_example\
 	esl_msafile_a2m_example\
 	esl_msafile_a2m_example2\
