--- a/Makefile.in
+++ b/Makefile.in
@@ -127,6 +127,7 @@ HDRS = 	easel.h\
 	esl_iset.h\
 	esl_json.h\
 	esl_keyhash.h\
+	esl_lognormal.h\
 	esl_matrixops.h\
 	esl_mem.h\
 	esl_minimizer.h\
@@ -209,6 +210,7 @@ OBJS =	easel.o\
 	esl_iset.o\
 	esl_json.o\
 	esl_keyhash.o\
+	esl_lognormal.o\
 	esl_matrixops.o\
 	esl_mem.o\
 	esl_minimizer.o\
@@ -305,6 +307,7 @@ UTESTS =\
 	esl_iset_utest\
 	esl_json_utest\
 	esl_keyhash_utest\
+	esl_lognormal_utest\
 	esl_matrixops_utest\
 	esl_mem_utest\
 	esl_minimizer_utest\
