Added a check to the configure scripts that complains and terminates configuration if both the --enable-sanitize-address and --enable-sanitize-thread options are passed, as GCC does not allow the thread and address sanitizers to be used concurrently

--- a/configure.ac
+++ b/configure.ac
@@ -558,6 +558,9 @@ if test "$enable_sanitize_address" = "yes"; then
   LDFLAGS="$LDFLAGS -fsanitize=address"
 fi
 if test "$enable_sanitize_thread" = "yes"; then
+  if test "$enable_sanitize_address" = "yes"; then  
+    AC_MSG_FAILURE([The address and thread sanitizers are incompatible.  Please use at most one of --enable-sanitize-address and --enable-sanitize-thread])
+  fi
   CFLAGS="$CFLAGS -fsanitize=thread"
   LDFLAGS="$LDFLAGS -fsanitize=thread"
 fi
