--- a/esl_config.h.in
+++ b/esl_config.h.in
@@ -19,8 +19,10 @@
 #undef EASEL_LICENSE
 #undef EASEL_URL
 
-/* Debugging/assertion hooks & verbosity level (0=none;3=most verbose) */
-#undef eslDEBUGLEVEL
+/* Control of debugging instrumentation */
+#undef eslDEBUGLEVEL    // debugging/assertion verbosity level: (0=none;3=most verbose) 
+#undef eslENABLE_ASAN   // some unit tests may need to know if AddressSanitizer is in use
+#undef eslENABLE_TSAN   //   ... ditto, for ThreadSanitizer
 
 /* Optional parallel implementation support */
 #undef eslENABLE_SSE
