esl_dsq module split away from esl_alphabet
esl_alphabet contained a bunch of functions for manipulating
ESL_DSQ's.  I decided to separate them out to their own esl_dsq
module.

A few dsq functions were also in easel.c; specifically, functions that
operate on text-mode sequences (NUL-terminated strings) that are
counterparts to functions operating on digitized ESL_DSQ's. I pulled
these into esl_dsq too.

One snag in this reorg, though, is that esl_alphabet depends on
ESL_DSQ, and esl_dsq functions depend on esl_alphabet; to break this
circularity, I still declare ESL_DSQ and define its associated
constants in esl_alphabet (these declarations/definitions were in
easel.h).

I simplified the interface to the esl_abc_{CX}Dealign functions, and
renamed _CDelaign() to esl_dsq_DealignAnnotation() to handle the case
that created the need for the confusing interface in the first place.

Summary of renamings:

old                      new                        other changes
----------------------  -------------------------   ----------------------
esl_abc_CreateDsq       esl_dsq_Create	            ret_dsq is not optional
esl_abc_Digitize        esl_dsq_Digitize
esl_abc_Textize         esl_dsq_Textize
esl_abc_TextizeN        esl_dsq_TextizeN
esl_abc_dsqcpy          esl_dsq_Copy                Allow L=-1 arg, like in esl_dsq_Clone
esl_abc_dsqdup	        esl_dsq_Clone
esl_abc_dsqcat          esl_dsq_Append
esl_abc_dsqcat_noalloc  esl_dsq_Append_noalloc
esl_abc_dsqlen          esl_dsq_GetLen
esl_abc_dsqrlen         esl_dsq_GetRawLen
esl_abc_XDealign        esl_dsq_Dealign             Interface simplified; no ref_ax.
esl_abc_CDealign        esl_dsq_DealignAnnotation
esl_abc_ConvertDegen2X  esl_dsq_Degen2X
esl_abc_revcomp         esl_dsq_Revcomp             <n> length arg changed from int to int64_t
-                       esl_dsq_WriteFASTA          [added]

easel.c:
esl_strmapcat           esl_dsq_CAppend             lsrc arg changed from esl_pos_t to int64_t
esl_strmapcat_noall

--- a/Makefile.in
+++ b/Makefile.in
@@ -110,6 +110,7 @@ HDRS = 	easel.h\
 	esl_dirichlet.h\
 	esl_distance.h\
 	esl_dmatrix.h\
+	esl_dsq.h\
 	esl_dsqdata.h\
 	esl_exponential.h\
 	esl_fileparser.h\
@@ -193,6 +194,7 @@ OBJS =	easel.o\
 	esl_dirichlet.o\
 	esl_distance.o\
 	esl_dmatrix.o\
+	esl_dsq.o\
 	esl_dsqdata.o\
 	esl_exponential.o\
 	esl_fileparser.o\
@@ -288,6 +290,7 @@ UTESTS =\
 	esl_buffer_utest\
 	esl_cluster_utest\
 	esl_cpu_utest\
+	esl_dsq_utest\
 	esl_dirichlet_utest\
 	esl_distance_utest\
 	esl_dmatrix_utest\
@@ -432,6 +435,7 @@ EXAMPLES = \
         esl_dirichlet_example\
 	esl_distance_example\
         esl_dmatrix_example\
+	esl_dsq_example\
         esl_dsqdata_example\
         esl_dsqdata_example2\
         esl_exponential_example\
