Adds esl_orfreader: six-frame translation of DNA sequence input
<esl_orfreader_Create()> creates an ESL_ORFREADER that wraps an
ESL_SQFILE input and an ESL_GENCODE genetic code;
<esl_orfreader_Read()> reads one translated ORF per call as it sweeps
across a DNA sequence input.

Sequence input is windowed, so input DNA sequence lengths are
effectively unlimited.

Codons containing ambiguity codes are decoded to correct amino acids
when the ambiguity is across synonymous codons (GGN, GGR are decoded
to glycine, for example).

The ESL_ORFREADER can be configured with options to control minimum
ORF length, watson (fwd) or crick (rev) strand reading only, and to
force ORFs to start with an initiation codon (as defined by the
provided ESL_GENCODE genetic code table).

The six-frame translation is done in a single pass, one nucleotide at
a time, maintaining six states for the six possible frames.  (The DNA
sequence doesn't need to be reverse complemented to get the reverse
frames.) The ORFs therefore come out in left-to-right order by their
rightmost coordinate: end coord (for fwd strand ORFs) or start coord
(for rev strand ORFs).

esl_orfreader_example is an example driver that's a simple version of
esl-translate.

esl_orfreader_utest implements the "seven orfs" unit test, an
elaborate and a-little-too-much-fun synthetic sequence concoction.

--- a/Makefile.in
+++ b/Makefile.in
@@ -150,6 +150,7 @@ HDRS = 	easel.h\
 	esl_msaweight.h\
 	esl_neon.h\
 	esl_normal.h\
+	esl_orfreader.h\
 	esl_paml.h\
 	esl_quicksort.h\
 	esl_random.h\
@@ -233,6 +234,7 @@ OBJS =	easel.o\
 	esl_msashuffle.o\
 	esl_msaweight.o\
 	esl_normal.o\
+	esl_orfreader.o\
 	esl_paml.o\
 	esl_quicksort.o\
 	esl_random.o\
@@ -328,6 +330,7 @@ UTESTS =\
 	esl_msafile_stockholm_utest\
 	esl_msaweight_utest\
 	esl_normal_utest\
+	esl_orfreader_utest\
 	esl_quicksort_utest\
 	esl_random_utest\
 	esl_rand64_utest\
@@ -481,6 +484,7 @@ EXAMPLES = \
         esl_msashuffle_example\
         esl_msaweight_example\
         esl_normal_example\
+	esl_orfreader_example\
         esl_random_example\
         esl_rand64_example\
 	esl_regexp_example\
