Updates list of man pages in configure.ac
configure.ac has a list of man pages that need to be configured with
version/release info, so as I replace esl-foo.man miniapp pages with
easel-foo.man pages for `easel foo` subcommands, I need to keep this
list up to date. HMMER, Infernal configure.ac's also have lists that
will also need to keep up to date.

--- a/configure.ac
+++ b/configure.ac
@@ -603,8 +603,8 @@ AC_CONFIG_FILES([ \
   miniapps/esl-sfetch.man      \
   miniapps/esl-shuffle.man     \
   miniapps/esl-ssdraw.man      \
-  miniapps/esl-translate.man   \
   miniapps/esl-weight.man      \
+  miniapps/easel-translate.man \
  ])
 
 AC_CONFIG_HEADERS([decoy_config.h])   # This keeps gnu 'autoheader' from overwriting our esl_config.h.in
